# probing-gha-with-dockerhub

./: Cargo.toml
.github/workflows/: main.yml
docker-stuff/: Dockerfile
src/: main.rs
