[package]
name = "probing-with-dockerhub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.52"
avro-rs = "0.13.0"
tokio = { version = "1.17.0", features = ["full", "rt-multi-thread", "macros", "tracing"]}